--- a/styles/global.css
+++ b/styles/global.css
@@ -2,41 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Adicione seus estilos globais aqui */
+/* Estilos globais */
 body {
   font-family: "Arial", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-.sidebar {
-  width: 250px;
-  height: 100vh;
-  background-color: #f4f4f4;
-  padding: 20px;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-}
-
-.sidebar h2 {
-  margin-bottom: 20px;
-}
-
-.sidebar ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.sidebar ul li {
-  margin-bottom: 10px;
-}
-
-.sidebar ul li a {
-  text-decoration: none;
-  color: #333;
-  font-weight: bold;
-}
-
-.sidebar ul li a:hover {
-  color: #0070f3;
 }
